tests/ui/static/extern-static-normalization-failure-issue-148161.stderr
error[E0277]: the trait bound `i8: Trait` is not satisfied
  --> $DIR/extern-static-normalization-failure-issue-148161.rs:17:17
   |
LL |     static VAR: Struct<i8>;
   |                 ^^^^^^^^^^ the trait `Trait` is not implemented for `i8`
   |
help: the trait `Trait` is implemented for `u8`
  --> $DIR/extern-static-normalization-failure-issue-148161.rs:6:1
   |
LL | impl Trait for u8 {
   | ^^^^^^^^^^^^^^^^^
note: required by a bound in `Struct`
  --> $DIR/extern-static-normalization-failure-issue-148161.rs:10:18
   |
LL | struct Struct<T: Trait> {
   |                  ^^^^^ required by this bound in `Struct`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
